# simple-blockchain-from-scratch

./: Cargo.toml  README.md  setup.sh
src/: lib.rs  main.rs
src/chain/: block.rs  blockchain.rs
src/consensus/: pow.rs
src/network/: api.rs
src/transactions/: transaction.rs  wallet.rs
src/utils/: hashing.rs
tests/: blockchain_tests.rs
