[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
secp256k1 = "0.27"
libp2p = { version = "0.43", default-features = false, features = ["tcp", "websocket", "dns", "libp2p-identify", "libp2p-ping"] }
